# gtk-notepad

./: .gitignore  README.md  meson.build
data/: gtk-notepad.desktop
src/: Application.vala  Dialogs.vala
